--- a/.env.back
+++ b/.env.back
@@ -1,3 +1,4 @@
 OPENAI_API_KEY=""
 CHAT_COMPLETION_MODEL="gpt-3.5-turbo"
 COMPLETION_MODEL="text-davinci-003"
+EMBEDDING_ENGINE="text-embedding-ada-002"
